--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
           name="image"
           accept="image/*"
           required
-        /><label for="about">Tell Us More About Yourself</label>
+        /><label for="about">Your Feedback</label>
         <textarea
           id="about"
           name="about"
-          placeholder="Please add more about yourself"
+          placeholder="what do you think"
           rows="6"
           required
         ></textarea>
