--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           id="image"
           name="image"
           accept="image/*"
+capture="user"
           required
         /><label for="about">Your Feedback</label>
         <textarea
